--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "sass": "^1.52.3"
   },
   "devDependencies": {
+    "@types/node": "^17.0.42",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
-    "invariant": "^2.2.4"
+    "invariant": "^2.2.4",
+    "typescript": "^4.7.3"
   }
 }
