--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,10 @@
     "incremental": true,
     "esModuleInterop": true,
     "module": "esnext",
-    // "resolveJsonModule": true,
+    "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "resolveJsonModule": true
+    "strict": false
   },
   "include": [
     "next-env.d.ts",
