--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "install": "^0.13.0",
     "next": "^12.1.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-page-scroller": "^2.2.1",
+    "react-slick": "^0.29.0",
     "sass": "^1.52.3"
   },
   "devDependencies": {
